New mian block order

--- a/css/style.css
+++ b/css/style.css
@@ -498,6 +498,7 @@ body.modal-on #sidebar .sidebar-modal {
     font-size: 22px;
     color: var(--soft-text-color);
     margin-bottom: 36px;
+    line-height: 1.4;
 }
 .work-showcase {
     width: 50%;
