Now using Intersection Observer API to detect the active section, and moved from pure scroll listeners to MouseWheel listeners and Touch Listeners for mobile navigation

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,9 @@ a {
 a:hover {
     color: var(--main-link-hover-color);
 }
+html, body {
+    overflow-y: hidden;
+}
 body {
     background-color: var(--main-color-blue);
 }
@@ -221,9 +224,11 @@ body.modal-on #sidebar {
     justify-content: space-between;
     overflow-y: auto;
 }
+/*
 .section-home.visible .content {
     position: fixed;
 }
+*/
 @keyframes sectionOut {
     0%   { opacity: 100%; position: fixed; transform: skewX(-50deg); top: 0; left: 0;}
     10%  { opacity: 100%; position: fixed; transform: skewX(0deg);}
